--- a/index_simulator_site.htm
+++ b/index_simulator_site.htm
@@ -3,7 +3,7 @@
 <TITLE>simulator_site</TITLE>
 </HEAD>
 <BODY bgcolor="#80FFFF"  link="#FF8040"  alink="#FF8040"  vlink="#FF8040">
-<P><img src="frog_in_cafe.png"  align="middle"></P>
+<img src="frog_in_cafe.png"  align="middle">
 
 </BODY>
 </HTML>
