--- a/index_simulator_site.html
+++ b/index_simulator_site.html
@@ -1,10 +1,20 @@
-<HTML>                                            
+<HTML>
 <HEAD>
 <TITLE>Добро ранку, путник</TITLE>
 </HEAD>
 <BODY  bgcolor="#FFFFFFF"  background="dungeons.jpg" link="#FF8040"  alink="#FF8040"  vlink="#FF8040">
 
-<P  align="center"><A HREF="1st_location.html"><P  align="center"><IMG SRC="fire.gif" ALT="Вы готовы отправиться в путь?" BORDER=0></P></A>
-<P  align="middle"  align="bottom"><img src="HUD.png" width="1360" height="206" HSPACE=280 alt="" /></P>
+    <P  align="middle">
+        <A HREF="1st_location.html">
+
+            <IMG SRC="fire.gif"  height="400"
+            onMouseOver="this.src='frog_in_cafe.png'" title="Вы готовы отправиться в путь?" height="800"
+            onMouseOut="this.src='fire.gif'" height="400"
+            BORDER=0>
+
+        </A>
+    </P>
+<P   align="bottom"><img src="HUD.png" width="1360" height="206" HSPACE=280 alt="" /></P>
+
 </BODY>
 </HTML>
